[gd_scene load_steps=12 format=3 uid="uid://epsr1o1tk6ur"]

[ext_resource type="Script" uid="uid://gohumc4rt4ne" path="res://objects/enemies/enemy.gd" id="1_d6f65"]
[ext_resource type="Script" uid="uid://bfk4pro2k5bf6" path="res://objects/enemies/enemy_hurt_box.gd" id="3_dm3ug"]
[ext_resource type="AudioStream" uid="uid://rid2phrdy8wc" path="res://sounds/game/hurt.wav" id="4_d6f65"]
[ext_resource type="Script" uid="uid://008ins25r0w8" path="res://components/health_component.gd" id="4_lijck"]
[ext_resource type="AudioStream" uid="uid://dv1dkq7k5kku0" path="res://sounds/game/die.wav" id="5_gpstc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ck1x7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fg4xr"]
radius = 4.4553447

[sub_resource type="Animation" id="Animation_hiwpu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundHurt:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteContainer:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SoundDie:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wvvdg"]
resource_name = "hit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.17453292519943295, 0.17453292519943295, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.9225407, 0.11194026, 0.10406432, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SoundHurt:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d6f65"]
resource_name = "die"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.17453292519943295, 0.17453292519943295, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.9225407, 0.11194026, 0.10406432, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.23333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1, 1), Vector2(1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SoundDie:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6f65"]
_data = {
&"RESET": SubResource("Animation_hiwpu"),
&"die": SubResource("Animation_d6f65"),
&"hit": SubResource("Animation_wvvdg")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_d6f65")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ck1x7")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("3_dm3ug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(5.840002, 5.840002)
shape = SubResource("CircleShape2D_fg4xr")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_lijck")
health = 150
metadata/_custom_type_script = "uid://008ins25r0w8"

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d6f65")
}

[node name="SoundHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d6f65")
bus = &"Effects"

[node name="SoundDie" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gpstc")
bus = &"Effects"

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="hit" from="HurtBox" to="HealthComponent" method="take_damage"]
[connection signal="got_hit" from="HealthComponent" to="." method="_on_health_component_got_hit"]
